--- a/packages/cli/test/functional/test_site_templates/test_default/expected/404.html
+++ b/packages/cli/test/functional/test_site_templates/test_default/expected/404.html
@@ -34,7 +34,7 @@
         <p style="font-size: 10rem">404</p>
       </div>
       <div class="text-center">
-        <p style="font-size: 1.5rem">File not found<br>Click <a href="/">here</a> to go back to the home page.</p>
+        <p style="font-size: 1.5rem">Page not found<br>Click <a href="/">here</a> to go back to the home page.</p>
       </div>
       </p>
       <i class="fa fa-arrow-circle-up fa-lg d-print-none" id="scroll-top-button" onclick="handleScrollTop()" aria-hidden="true"></i>
