--- a/packages/cli/test/functional/test_site_templates/test_default/expected/contents/topic2.html
+++ b/packages/cli/test/functional/test_site_templates/test_default/expected/contents/topic2.html
@@ -88,9 +88,10 @@
       <div id="content-wrapper">
 
         <br>
-        <box>
-          <span class="fas fa-tools"></span><span> This is a placeholder page</span>
-        </box>
+        <h1 id="topic-2"><span id="topic-2" class="anchor"></span>Topic 2<a class="fa fa-anchor" href="#topic-2" onclick="event.stopPropagation()"></a></h1>
+        <blockquote>
+          <p>This is a placeholder page - more content to be added.</p>
+        </blockquote>
         <i class="fa fa-arrow-circle-up fa-lg d-print-none" id="scroll-top-button" onclick="handleScrollTop()" aria-hidden="true"></i>
       </div>
       <overlay-source id="page-nav" tag-name="nav" to="page-nav">
