--- a/packages/cli/test/functional/test_site_templates/test_default/expected/index.html
+++ b/packages/cli/test/functional/test_site_templates/test_default/expected/index.html
@@ -99,19 +99,19 @@
         <blockquote>
           <p>Learn about the variety of syntax schemes, formats, and custom MarkBind components that you can use in your MarkBind site.</p>
         </blockquote>
-        <p><span class="indented">More info in: <em><a href="https://markbind.org/userGuide/authoringContents.html" target="_blank">User Guide → Authoring Contents</a></em></span></p>
+        <p>More info in: <em><a href="https://markbind.org/userGuide/authoringContents.html" target="_blank">User Guide → Authoring Contents</a></em></p>
         <hr>
         <h5 id="user-guide-working-with-sites"><span id="user-guide-working-with-sites" class="anchor"></span><strong>User Guide: Working with Sites</strong><a class="fa fa-anchor" href="#user-guide-working-with-sites" onclick="event.stopPropagation()"></a></h5>
         <blockquote>
           <p>Learn how to modify site properties, apply themes, and enable / disable plugins for your MarkBind site.</p>
         </blockquote>
-        <p><span class="indented">More info in: <em><a href="https://markbind.org/userGuide/authoringContents.html" target="_blank">User Guide → Working with Sites</a></em></span></p>
+        <p>More info in: <em><a href="https://markbind.org/userGuide/authoringContents.html" target="_blank">User Guide → Working with Sites</a></em></p>
         <hr>
         <h5 id="user-guide-full-syntax-reference"><span id="user-guide-full-syntax-reference" class="anchor"></span><strong>User Guide: Full Syntax Reference</strong><a class="fa fa-anchor" href="#user-guide-full-syntax-reference" onclick="event.stopPropagation()"></a></h5>
         <blockquote>
           <p>Refer to our Full Syntax Reference page to find a specific feature or component that you want to use in your MarkBind site.</p>
         </blockquote>
-        <p><span class="indented">More info in: <em><a href="https://markbind.org/userGuide/fullSyntaxReference.html" target="_blank">User Guide → Full Syntax Reference</a></em></span></p>
+        <p>More info in: <em><a href="https://markbind.org/userGuide/fullSyntaxReference.html" target="_blank">User Guide → Full Syntax Reference</a></em></p>
         <hr>
       </div>
       <overlay-source id="page-nav" tag-name="nav" to="page-nav">
