--- a/packages/cli/test/functional/test_site/expected/index.html
+++ b/packages/cli/test/functional/test_site/expected/index.html
@@ -316,9 +316,13 @@
               Div with shown tag
             </div>
             <p><strong>Div with site shown tag</strong></p>
-
+            <div tags="tag-site-shown">
+              Div with site shown tag
+            </div>
             <p><strong>Div with multiple tags</strong></p>
-
+            <div tags="tag-site-shown tag-other">
+              Div with multiple tags
+            </div>
             <p><strong>Div with hidden tag (Hidden)</strong></p>
 
             <div>
@@ -334,10 +338,15 @@
             <p><strong>Div with tag matching general tag and specific tag (Hidden)</strong></p>
 
             <p><strong>Div with tag matching frontmatter tag overridden by matching site tag</strong></p>
-
+            <div tags="tag-site-override-shown">
+              Div with tag matching frontmatter tag overridden by matching site tag
+            </div>
             <p><strong>Div with tag matching general frontmatter tag not overridden by matching specific site tag (Hidden)</strong></p>
 
             <p><strong>Div with tag matching general frontmatter tag overridden by matching specific site tag</strong></p>
+            <div tags="tag-site-override-shown">
+              Div with tag matching general frontmatter tag overridden by matching specific site tag
+            </div>
           </div>
           <p><strong>Normal include</strong></p>
           <div>
