--- a/packages/cli/test/functional/test_site/expected/testFontAwesomeInPage.html
+++ b/packages/cli/test/functional/test_site/expected/testFontAwesomeInPage.html
@@ -12,9 +12,6 @@
   <title>font-awesome icon in page, only font-awesome stylesheet should be loaded</title>
   <link rel="stylesheet" href="/test_site/markbind/css/bootstrap.min.css">
   <link rel="stylesheet" href="/test_site/markbind/fontawesome/css/all.min.css">
-  <link rel="stylesheet" href="/test_site/markbind/glyphicons/css/bootstrap-glyphicons.min.css">
-  <link rel="stylesheet" href="/test_site/markbind/css/octicons.css">
-  <link rel="stylesheet" href="/test_site/markbind/material-icons/material-icons.css">
   <link rel="stylesheet" href="/test_site/markbind/css/codeblock-dark.min.css">
   <link rel="stylesheet" href="/test_site/markbind/css/markbind.min.css">
   <script src="/test_site/markbind/js/polyfill.min.js"></script>
@@ -58,7 +55,12 @@
       <div id="content-wrapper">
         <breadcrumb></breadcrumb>
 
-        <p>A font-awesome icon is supposed to appear here ---&gt; <span aria-hidden="true" class="fas fa-code-branch"></span></p>
+        <p>
+          <trigger for="modal:fontAwesome">There is one font-awesome icon in this modal</trigger>.
+        </p>
+        <modal id="modal:fontAwesome"><template #header><strong>Modal with font-awesome icon</strong> 🚀</template>
+          <p>A font-awesome icon is supposed to appear here ---&gt; <span aria-hidden="true" class="fas fa-code-branch"></span></p>
+        </modal>
         <p><strong>There is one font-awesome icon in this page content.</strong></p>
         <p><strong>Open up console. Only font-awesome stylesheet should be loaded!</strong></p>
       </div>
