--- a/packages/cli/test/functional/test_site/expected/testGlyphiconInPage.html
+++ b/packages/cli/test/functional/test_site/expected/testGlyphiconInPage.html
@@ -11,10 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>glyphicon icon in page, only glyphicon stylesheet should be loaded</title>
   <link rel="stylesheet" href="/test_site/markbind/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/test_site/markbind/fontawesome/css/all.min.css">
   <link rel="stylesheet" href="/test_site/markbind/glyphicons/css/bootstrap-glyphicons.min.css">
-  <link rel="stylesheet" href="/test_site/markbind/css/octicons.css">
-  <link rel="stylesheet" href="/test_site/markbind/material-icons/material-icons.css">
   <link rel="stylesheet" href="/test_site/markbind/css/codeblock-dark.min.css">
   <link rel="stylesheet" href="/test_site/markbind/css/markbind.min.css">
   <script src="/test_site/markbind/js/polyfill.min.js"></script>
@@ -58,7 +55,11 @@
       <div id="content-wrapper">
         <breadcrumb></breadcrumb>
 
-        <p>An glyphicon icon is supposed to appear here ---&gt; <span aria-hidden="true" class="glyphicon glyphicon-hand-right"></span></p>
+        <panel><template #header>
+            <p>There is a glyphicon icon in this panel.</p>
+          </template>
+          <p>An glyphicon icon is supposed to appear here ---&gt; <span aria-hidden="true" class="glyphicon glyphicon-hand-right"></span></p>
+        </panel>
         <p><strong>There is one glyphicon icon in this page content.</strong></p>
         <p><strong>Open up console. Only glyphicon stylesheet should be loaded!</strong></p>
       </div>
