--- a/packages/cli/test/functional/test_site_algolia_plugin/expected/index.html
+++ b/packages/cli/test/functional/test_site_algolia_plugin/expected/index.html
@@ -17,6 +17,7 @@
   <script src="/test_site_algolia_plugin/markbind/js/markbind.min.js"></script>
   <script src="index.page-vue-render.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3.2.0/dist/style.css">
+  <link rel="preconnect" href="https://R2IYF7ETH7-dsn.algolia.net" crossorigin />
   <link rel="stylesheet" href="/test_site_algolia_plugin/plugins/markbind-plugin-anchors/markbind-plugin-anchors.css">
   <link rel="stylesheet" href="/test_site_algolia_plugin/plugins/markbind-plugin-tree/markbind-plugin-tree.css">
 </head>
