--- a/packages/cli/test/functional/test_site_templates/test_project/expected/index.html
+++ b/packages/cli/test/functional/test_site_templates/test_project/expected/index.html
@@ -64,13 +64,13 @@
                 </div>
                 <ul class="site-nav-dropdown-container site-nav-dropdown-container-open site-nav-list">
                   <li>
-                    <div class="site-nav-default-list-item site-nav-list-item-1" onclick="handleSiteNavClick(this)"><a href="/UserGuide.html#quick-start">Quick Start</a></div>
+                    <div class="site-nav-default-list-item site-nav-list-item-1" onclick="handleSiteNavClick(this)"><a href="/QuickStart.html">Quick Start</a></div>
                   </li>
                   <li>
-                    <div class="site-nav-default-list-item site-nav-list-item-1" onclick="handleSiteNavClick(this)"><a href="/UserGuide.html#features">Features</a></div>
+                    <div class="site-nav-default-list-item site-nav-list-item-1" onclick="handleSiteNavClick(this)"><a href="/Features.html">Features</a></div>
                   </li>
                   <li>
-                    <div class="site-nav-default-list-item site-nav-list-item-1" onclick="handleSiteNavClick(this)"><a href="/UserGuide.html#faq">FAQ</a></div>
+                    <div class="site-nav-default-list-item site-nav-list-item-1" onclick="handleSiteNavClick(this)"><a href="/FAQ.html">FAQ</a></div>
                   </li>
                 </ul>
               </li>
@@ -83,49 +83,69 @@
                 </div>
                 <ul class="site-nav-dropdown-container site-nav-dropdown-container-open site-nav-list">
                   <li>
-                    <div class="site-nav-default-list-item site-nav-list-item-1" onclick="handleSiteNavClick(this)"><a href="/DeveloperGuide.html#acknowledgements">Acknowledgements</a></div>
+                    <div class="site-nav-default-list-item site-nav-list-item-1" onclick="handleSiteNavClick(this)"><a href="/SettingUp.html">Setting Up</a></div>
                   </li>
                   <li>
-                    <div class="site-nav-default-list-item site-nav-list-item-1" onclick="handleSiteNavClick(this)"><a href="/DeveloperGuide.html#setting-up-getting-started">Setting Up</a></div>
+                    <div class="site-nav-default-list-item site-nav-list-item-1" onclick="handleSiteNavClick(this)"><a href="/Design.html">Design</a></div>
                   </li>
                   <li>
-                    <div class="site-nav-default-list-item site-nav-list-item-1" onclick="handleSiteNavClick(this)"><a href="/DeveloperGuide.html#design">Design</a></div>
+                    <div class="site-nav-default-list-item site-nav-list-item-1" onclick="handleSiteNavClick(this)"><a href="/Implementation.html">Implementation</a></div>
                   </li>
                   <li>
-                    <div class="site-nav-default-list-item site-nav-list-item-1" onclick="handleSiteNavClick(this)"><a href="/DeveloperGuide.html#implementation">Implementation</a></div>
+                    <div class="site-nav-default-list-item site-nav-list-item-1" onclick="handleSiteNavClick(this)">Project Guides
+
+                      <div class="site-nav-dropdown-btn-container"><i class="site-nav-dropdown-btn-icon" onclick="handleSiteNavClick(this.parentNode.parentNode, false); event.stopPropagation();">
+                          <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span>
+                        </i></div>
+                    </div>
+                    <ul class="site-nav-dropdown-container site-nav-list">
+                      <li>
+                        <div class="site-nav-default-list-item site-nav-list-item-2" onclick="handleSiteNavClick(this)"><a href="/Documentation.html">Documentation</a></div>
+                      </li>
+                      <li>
+                        <div class="site-nav-default-list-item site-nav-list-item-2" onclick="handleSiteNavClick(this)"><a href="/Testing.html">Testing</a></div>
+                      </li>
+                      <li>
+                        <div class="site-nav-default-list-item site-nav-list-item-2" onclick="handleSiteNavClick(this)"><a href="/Configuration.html">Configuration</a></div>
+                      </li>
+                      <li>
+                        <div class="site-nav-default-list-item site-nav-list-item-2" onclick="handleSiteNavClick(this)"><a href="/DevOps.html">DevOps</a></div>
+                      </li>
+                    </ul>
                   </li>
                   <li>
-                    <div class="site-nav-default-list-item site-nav-list-item-1" onclick="handleSiteNavClick(this)"><a href="/DeveloperGuide.html#project-guides">Project Guides</a></div>
-                  </li>
-                  <li>
-                    <div class="site-nav-default-list-item site-nav-list-item-1" onclick="handleSiteNavClick(this)"><a href="/DeveloperGuide.html#appendix-requirements">Appendix: Requirements</a></div>
-                  </li>
-                  <li>
-                    <div class="site-nav-default-list-item site-nav-list-item-1" onclick="handleSiteNavClick(this)"><a href="/DeveloperGuide.html#appendix-instructions-for-manual-testing">Appendix: Instructions for manual testing</a></div>
+                    <div class="site-nav-default-list-item site-nav-list-item-1" onclick="handleSiteNavClick(this)">Appendix
+
+                      <div class="site-nav-dropdown-btn-container"><i class="site-nav-dropdown-btn-icon" onclick="handleSiteNavClick(this.parentNode.parentNode, false); event.stopPropagation();">
+                          <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span>
+                        </i></div>
+                    </div>
+                    <ul class="site-nav-dropdown-container site-nav-list">
+                      <li>
+                        <div class="site-nav-default-list-item site-nav-list-item-2" onclick="handleSiteNavClick(this)"><a href="/Requirements.html">Requirements</a></div>
+                      </li>
+                      <li>
+                        <div class="site-nav-default-list-item site-nav-list-item-2" onclick="handleSiteNavClick(this)"><a href="/ManualTestingInstructions.html">Manual Testing Instructions</a></div>
+                      </li>
+                    </ul>
                   </li>
                 </ul>
               </li>
               <li>
-                <div class="site-nav-default-list-item site-nav-list-item-0" onclick="handleSiteNavClick(this)">Tutorials
+                <div class="site-nav-default-list-item site-nav-list-item-0" onclick="handleSiteNavClick(this)"><a href="/TracingCode.html">Tutorial: Tracing code</a></div>
+              </li>
+              <li>
+                <div class="site-nav-default-list-item site-nav-list-item-0" onclick="handleSiteNavClick(this)"><a href="/AboutUs.html">About Us</a>
 
-                  <div class="site-nav-dropdown-btn-container"><i class="site-nav-dropdown-btn-icon" onclick="handleSiteNavClick(this.parentNode.parentNode, false); event.stopPropagation();">
+                  <div class="site-nav-dropdown-btn-container"><i class="site-nav-dropdown-btn-icon site-nav-rotate-icon" onclick="handleSiteNavClick(this.parentNode.parentNode, false); event.stopPropagation();">
                       <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span>
                     </i></div>
                 </div>
-                <ul class="site-nav-dropdown-container site-nav-list">
+                <ul class="site-nav-dropdown-container site-nav-dropdown-container-open site-nav-list">
                   <li>
-                    <div class="site-nav-default-list-item site-nav-list-item-1" onclick="handleSiteNavClick(this)"><a href="/tutorials/TracingCode.html">Tracing code</a></div>
-                  </li>
-                  <li>
-                    <div class="site-nav-default-list-item site-nav-list-item-1" onclick="handleSiteNavClick(this)"><a href="/tutorials/AddingFeature.html">Adding feature</a></div>
-                  </li>
-                  <li>
-                    <div class="site-nav-default-list-item site-nav-list-item-1" onclick="handleSiteNavClick(this)"><a href="/tutorials/RemovingFeature.html">Removing Feature</a></div>
+                    <div class="site-nav-default-list-item site-nav-list-item-1" onclick="handleSiteNavClick(this)"><a href="/team/johndoe.html">Contributor Portfolio</a></div>
                   </li>
                 </ul>
-              </li>
-              <li>
-                <div class="site-nav-default-list-item site-nav-list-item-0" onclick="handleSiteNavClick(this)"><a href="/AboutUs.html">About Us</a></div>
               </li>
             </overlay-source>
           </site-nav>
@@ -137,13 +157,13 @@
         <p><a href="https://github.com/MarkBind/markbind/actions"><img src="https://github.com/MarkBind/markbind/workflows/CI/badge.svg" alt="CI Status" class="img-fluid"></a>
           <a href="https://codecov.io/gh/MarkBind/markbind"><img src="https://codecov.io/gh/MarkBind/markbind/branch/master/graph/badge.svg" alt="codecov" class="img-fluid"></a>
         </p>
-        <img src="/images/johndoe.png" width="200px">
+        <img src="/images/SeEduLogo.png" width="200px">
         <box type="tip" seamless>
           Can insert your app's onboarding screen or representative picture here.
         </box>
-        <p><strong>ProjectEx is an example project application used for showcasing a default MarkBind template specifically for project domentaion.</strong></p>
+        <p><strong>ProjectEx is an example project application used for showcasing a default MarkBind template specifically for project documentation.</strong></p>
         <ul>
-          <li>If you are interested in using ProjectEx, head over to the <a href="/UserGuide.html#quick-start"><em>Quick Start</em> section of the <strong>User Guide</strong></a>.</li>
+          <li>If you are interested in using ProjectEx, head over to the <a href="/QuickStart.html"><em>Quick Start</em> section of the <strong>User Guide</strong></a>.</li>
           <li>If you are interested about contributing to developing ProjectEx, the <a href="/DeveloperGuide.html"><strong>Developer Guide</strong></a> is a good place to start.</li>
         </ul>
         <p><strong>Acknowledgements</strong></p>
